src/tests/routes/crates/versions/snapshots/all__routes__crates__versions__read__show_by_crate_name_and_semver_no_published_by.snap
---
source: src/tests/routes/crates/versions/read.rs
expression: json
---
{
  "version": {
    "audit_actions": [],
    "bin_names": null,
    "checksum": "                                                                ",
    "crate": "foo_vers_show_no_pb",
    "crate_size": 0,
    "created_at": "[datetime]",
    "dl_path": "https://crates.io/api/v1/crates/foo_vers_show_no_pb/1.0.0/download",
    "downloads": 0,
    "features": {},
    "has_lib": null,
    "id": "[id]",
    "lib_links": null,
    "license": null,
    "links": {
      "authors": "https://crates.io/api/v1/crates/foo_vers_show_no_pb/1.0.0/authors",
      "dependencies": "https://crates.io/api/v1/crates/foo_vers_show_no_pb/1.0.0/dependencies",
      "version_downloads": "https://crates.io/api/v1/crates/foo_vers_show_no_pb/1.0.0/downloads"
    },
    "num": "1.0.0",
    "published_by": null,
    "readme_path": "https://crates.io/api/v1/crates/foo_vers_show_no_pb/1.0.0/readme",
    "rust_version": null,
    "updated_at": "[datetime]",
    "yanked": false
  }
}
