src/tests/routes/crates/versions/snapshots/all__routes__crates__versions__read__show_by_crate_name_and_version.snap
---
source: src/tests/routes/crates/versions/read.rs
expression: json
---
{
  "version": {
    "audit_actions": [],
    "bin_names": null,
    "checksum": "c241cd77c3723ccf1aa453f169ee60c0a888344da504bee0142adb859092acb4",
    "crate": "foo_vers_show",
    "crate_size": 1234,
    "created_at": "[datetime]",
    "dl_path": "https://crates.io/api/v1/crates/foo_vers_show/2.0.0/download",
    "downloads": 0,
    "features": {},
    "has_lib": null,
    "id": "[id]",
    "lib_links": null,
    "license": null,
    "links": {
      "authors": "https://crates.io/api/v1/crates/foo_vers_show/2.0.0/authors",
      "dependencies": "https://crates.io/api/v1/crates/foo_vers_show/2.0.0/dependencies",
      "version_downloads": "https://crates.io/api/v1/crates/foo_vers_show/2.0.0/downloads"
    },
    "num": "2.0.0",
    "published_by": {
      "avatar": null,
      "id": "[id]",
      "login": "foo",
      "name": null,
      "url": "https://github.com/foo"
    },
    "readme_path": "https://crates.io/api/v1/crates/foo_vers_show/2.0.0/readme",
    "rust_version": "1.64",
    "updated_at": "[datetime]",
    "yanked": false
  }
}
